

**********************************************************************************

#### CrossApp 1.4.1 正式版 更新内容：

#####1.支持IPV6-Only网络

#####2.新版UI编辑器，支持CACell的布局编辑

#####3.添加CAPair

#####4.CAObject添加延时执行方法performSelector

#####5.优化上下拉刷新

#####6.添加陀螺仪

#####7.其他一些细节的优化


**********************************************************************************

#### CrossApp 1.4.0 正式版 更新内容：

#####1.优化CATextField在安卓端的体验

#####2.优化CATextView在安卓端的体验

#####3.优化CAWebView在安卓端的体验

#####4.增加对安卓以及iOS屏幕旋转支持

#####5.修复CABar设置TitleView布局不正确的bug

#####6.修改CADevice中加速度计的更新间隔

#####7.修改CADevice中消息通知在安卓平台的延迟时间

#####8.其他一些细节的优化

**********************************************************************************

#### CrossApp 1.4.0 Beta2 更新内容：

#####1.新增新版UI编辑器，支持自适应布局CALayout

#####2.重构CADevice, 拥有功能如下：
#######1、获取苹果系统版本#######2、获取安卓版本#######3、打开相机#######4、打开相册#######5、获取屏幕亮度#######6、设置屏幕亮度#######7、获取通讯录信息#######8、获取网络连接类型#######9、获取安卓wifi列表#######10、获取wifi连接信息#######11、设置声音#######12、获取声音#######13、打开网址#######14、获取电池电量#######15、网络是否可用#######16、消息通知#######17、打开关闭蓝牙#######18、将照片写入相册中#######19、开始更新，停止更新位置（经纬度）#######20、加速度传感器（开始、停止更新）
#####3.优化网络下载类CADownloadManager

#####4.优化网络类CAHttpRequest、

#####5.引擎Test大幅度更新

#####6.新增简易富文本CAFTRichFont类

#####7.其他一些细节的优化

**********************************************************************************


#### CrossApp 1.4.0 Beta1 更新内容：

#####1.新增自适应布局系统 DLayout
使用方法详见官网文档以及test示例代码

#####2.支持iOS平台设备旋转

#####3.优化视频组件性能以及体验

#####4.优化触摸体验

#####5.新增CAFont字体类

#####6.新增简易富文本CAFTRichFont类

#####7.优化CAWaterfallView瀑布流组件

#####8.优化CANavigationController

#####9.优化CATabBarController

#####10.优化CAAlertView

#####11.优化CAGifView

#####12.修复CAWebView在android平台的bug

#####13.修复输入框在android平台某些情况无法获取内容的bug

#####14.其他一些细节的优化

**********************************************************************************


#### CrossApp 1.3.1 正式版 更新内容：

#####1.修复CATextField在iOS7.x，弹起键盘卡死的bug

#####2.重构CATbarBar

#####3.重构CANavigationBar

#####4.优化触摸
