@@ -315,7 +315,10 @@ void CATextView::onEnterTransitionDidFinish()
 void CATextView::onExitTransitionDidStart()
 {
     CAControl::onExitTransitionDidStart();
-    this->resignFirstResponder();
+    if (this->isFirstResponder())
+    {
+        this->resignFirstResponder();
+    }
 }
 
 bool CATextView::resignFirstResponder()
