@@ -225,7 +225,10 @@ void CATextField::onEnterTransitionDidFinish()
 void CATextField::onExitTransitionDidStart()
 {
     CAControl::onExitTransitionDidStart();
-    this->resignFirstResponder();
+    if (this->isFirstResponder())
+    {
+        this->resignFirstResponder();
+    }
 }
 
 bool CATextField::resignFirstResponder()
