@@ -1,4 +1,9 @@
+**********************************************************************************
 
+#### CrossApp 1.4.1a 正式版 更新内容：
+
+#####1.一些细节的优化以及bug的修改
+编译安卓建议升级Android.mk、Application.mk文件到你的项目中
 
 **********************************************************************************
 
